--- a/orig/dogs_cats_redux.ipynb
+++ b/orig/dogs_cats_redux.ipynb
@@ -92,14 +92,16 @@
     "#Create references to important directories we will use over and over\n",
     "import os, sys\n",
     "current_dir = os.getcwd()\n",
-    "LESSON_HOME_DIR = current_dir\n",
+    "LESSON_SUBMISSION_DIR = current_dir\n",
     "DATA_DIR = current_dir+'/data/dogscats'"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Allow relative imports to directories above lesson1/\n",
@@ -140,6 +142,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
+    "collapsed": true,
     "hidden": true
    },
    "outputs": [],
@@ -158,7 +161,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#%cd $DATA_HOME_DIR/train"
@@ -168,6 +173,7 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
+    "collapsed": true,
     "hidden": true
    },
    "outputs": [],
@@ -207,6 +213,7 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
+    "collapsed": true,
     "hidden": true
    },
    "outputs": [],
@@ -246,6 +253,92 @@
      ]
     }
    ],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "heading_collapsed": true
+   },
+   "source": [
+    "## Rearrange image files into their respective directories"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true,
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "#Divide cat/dog images into separate directories\n",
+    "\n",
+    "# %cd $DATA_HOME_DIR/sample/train\n",
+    "# %mkdir cats\n",
+    "# %mkdir dogs\n",
+    "# %mv cat.*.jpg cats/\n",
+    "# %mv dog.*.jpg dogs/\n",
+    "\n",
+    "# %cd $DATA_HOME_DIR/sample/valid\n",
+    "# %mkdir cats\n",
+    "# %mkdir dogs\n",
+    "# %mv cat.*.jpg cats/\n",
+    "# %mv dog.*.jpg dogs/\n",
+    "\n",
+    "# %cd $DATA_HOME_DIR/valid\n",
+    "# %mkdir cats\n",
+    "# %mkdir dogs\n",
+    "# %mv cat.*.jpg cats/\n",
+    "# %mv dog.*.jpg dogs/\n",
+    "\n",
+    "# %cd $DATA_HOME_DIR/train\n",
+    "# %mkdir cats\n",
+    "# %mkdir dogs\n",
+    "# %mv cat.*.jpg cats/\n",
+    "# %mv dog.*.jpg dogs/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": true,
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "# Create single 'unknown' class for test set\n",
+    "# %cd $DATA_HOME_DIR/test\n",
+    "# %mv *.jpg unknown/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Finetuning and Training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/ubuntu/nbs/data/dogscats\n",
+      "/home/ubuntu/nbs/data/dogscats/sample/\n",
+      "/home/ubuntu/nbs/data/dogscats/test/\n",
+      "/home/ubuntu/nbs/data/dogscats/results/\n",
+      "/home/ubuntu/nbs/data/dogscats/sample//train/\n",
+      "/home/ubuntu/nbs/data/dogscats/sample//valid/\n"
+     ]
+    }
+   ],
    "source": [
     "%cd $DATA_DIR\n",
     "\n",
@@ -262,86 +355,6 @@
     "print results_path\n",
     "print train_path \n",
     "print valid_path"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
-   "source": [
-    "## Rearrange image files into their respective directories"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
-   "outputs": [],
-   "source": [
-    "#Divide cat/dog images into separate directories\n",
-    "\n",
-    "%cd $DATA_HOME_DIR/sample/train\n",
-    "%mkdir cats\n",
-    "%mkdir dogs\n",
-    "%mv cat.*.jpg cats/\n",
-    "%mv dog.*.jpg dogs/\n",
-    "\n",
-    "%cd $DATA_HOME_DIR/sample/valid\n",
-    "%mkdir cats\n",
-    "%mkdir dogs\n",
-    "%mv cat.*.jpg cats/\n",
-    "%mv dog.*.jpg dogs/\n",
-    "\n",
-    "%cd $DATA_HOME_DIR/valid\n",
-    "%mkdir cats\n",
-    "%mkdir dogs\n",
-    "%mv cat.*.jpg cats/\n",
-    "%mv dog.*.jpg dogs/\n",
-    "\n",
-    "%cd $DATA_HOME_DIR/train\n",
-    "%mkdir cats\n",
-    "%mkdir dogs\n",
-    "%mv cat.*.jpg cats/\n",
-    "%mv dog.*.jpg dogs/"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
-   "outputs": [],
-   "source": [
-    "# Create single 'unknown' class for test set\n",
-    "%cd $DATA_HOME_DIR/test\n",
-    "%mv *.jpg unknown/"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Finetuning and Training"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%cd $DATA_HOME_DIR\n",
-    "\n",
-    "#Set path to sample/ path if desired\n",
-    "path = DATA_HOME_DIR + '/' #'/sample/'\n",
-    "test_path = DATA_HOME_DIR + '/test/' #We use all the test data\n",
-    "results_path=DATA_HOME_DIR + '/results/'\n",
-    "train_path=path + '/train/'\n",
-    "valid_path=path + '/valid/'"
    ]
   },
   {
@@ -372,7 +385,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Finetune the model\n",
@@ -387,7 +402,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Notice we are passing in the validation dataset to the fit() method\n",
@@ -421,6 +438,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "hidden": true,
     "scrolled": true
    },
@@ -433,6 +451,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "hidden": true
    },
    "outputs": [],
@@ -450,6 +469,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "hidden": true
    },
    "outputs": [],
@@ -521,7 +541,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "val_batches, probs = vgg.test(valid_path, batch_size = batch_size)"
@@ -546,7 +568,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from keras.preprocessing import image\n",
@@ -563,7 +587,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#1. A few correct labels at random\n",
@@ -576,7 +602,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#2. A few incorrect labels at random\n",
@@ -589,7 +617,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#3a. The images we most confident were cats, and are actually cats\n",
@@ -602,7 +632,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#3b. The images we most confident were dogs, and are actually dogs\n",
@@ -615,7 +647,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#4a. The images we were most confident were cats, but are actually dogs\n",
@@ -629,7 +663,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#4b. The images we were most confident were dogs, but are actually cats\n",
@@ -643,7 +679,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#5. The most uncertain labels (ie those with probability closest to 0.5).\n",
@@ -680,7 +718,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "plot_confusion_matrix(cm, val_batches.class_indices)"
@@ -726,6 +766,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "hidden": true
    },
    "outputs": [],
@@ -749,7 +790,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Visualize Log Loss when True value = 1\n",
@@ -775,7 +818,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#So to play it safe, we use a sneaky trick to round down our edge predictions\n",
@@ -808,6 +853,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "hidden": true
    },
    "outputs": [],
@@ -820,6 +866,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "hidden": true
    },
    "outputs": [],
@@ -833,12 +880,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "hidden": true
    },
    "outputs": [],
    "source": [
     "from IPython.display import FileLink\n",
-    "%cd $LESSON_HOME_DIR\n",
+    "%cd $LESSON_SUBMISSION_DIR\n",
     "FileLink('data/redux/'+submission_file_name)"
    ]
   },
